SmartHomeDesktop/include/vpx/vpx_codec.h

    
    typedef enum {
        VPX_CODEC_OK,
        VPX_CODEC_ERROR,
        VPX_CODEC_MEM_ERROR,
        VPX_CODEC_ABI_MISMATCH,
        VPX_CODEC_INCAPABLE,
        VPX_CODEC_UNSUP_BITSTREAM,
        VPX_CODEC_UNSUP_FEATURE,
        VPX_CODEC_CORRUPT_FRAME,
        VPX_CODEC_INVALID_PARAM,
        VPX_CODEC_LIST_END
    }
    vpx_codec_err_t;
    typedef long vpx_codec_flags_t;
    typedef const struct vpx_codec_iface vpx_codec_iface_t;
    typedef       struct vpx_codec_priv  vpx_codec_priv_t;
    typedef const void *vpx_codec_iter_t;
    typedef struct vpx_codec_ctx
    {
        const char              *name;        
        vpx_codec_iface_t       *iface;       
        vpx_codec_err_t          err;         
        const char              *err_detail;  
        vpx_codec_flags_t        init_flags;  
        union
        {
            struct vpx_codec_dec_cfg  *dec;   
            struct vpx_codec_enc_cfg  *enc;   
            void                      *raw;
        }                        config;      
        vpx_codec_priv_t        *priv;        
    } vpx_codec_ctx_t;