SmartHomeDesktop/src/vpx/VpxLibrary.java

	synchronized protected native static int vpx_codec_enc_init_multi_ver(@Ptr long ctx, @Ptr long iface, @Ptr long cfg, int num_enc, @CLong long flags, @Ptr long dsf, int ver);
	/**
	 * \brief Get a default configuration<br>
	 * * Initializes a encoder configuration structure with default values. Supports<br>
	 * the notion of "usages" so that an algorithm may offer different default<br>
	 * settings depending on the user's intended goal. This function \ref SHOULD<br>
	 * be called by all applications to initialize the configuration structure<br>
	 * before specializing the configuration with application specific values.<br>
	 * * \param[in]    iface   Pointer to the algorithm interface to use.<br>
	 * \param[out]   cfg     Configuration buffer to populate<br>
	 * \param[in]    usage   End usage. Set to 0 or use codec specific values.<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The configuration was populated.<br>
	 * \retval #VPX_CODEC_INCAPABLE<br>
	 *     Interface is not an encoder interface.<br>
	 * \retval #VPX_CODEC_INVALID_PARAM<br>
	 *     A parameter was NULL, or the usage value was not recognized.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_enc_config_default(vpx_codec_iface_t*, vpx_codec_enc_cfg_t*, unsigned int)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:739</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_enc_config_default(Pointer<VpxLibrary.vpx_codec_iface > iface, Pointer<vpx_codec_enc_cfg_t > cfg, int usage) {
		return FlagSet.fromValue(vpx_codec_enc_config_default(Pointer.getPeer(iface), Pointer.getPeer(cfg), usage), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_enc_config_default(@Ptr long iface, @Ptr long cfg, int usage);
	/**
	 * \brief Set or change configuration<br>
	 * * Reconfigures an encoder instance according to the given configuration.<br>
	 * * \param[in]    ctx     Pointer to this instance's context<br>
	 * \param[in]    cfg     Configuration buffer to use<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The configuration was populated.<br>
	 * \retval #VPX_CODEC_INCAPABLE<br>
	 *     Interface is not an encoder interface.<br>
	 * \retval #VPX_CODEC_INVALID_PARAM<br>
	 *     A parameter was NULL, or the usage value was not recognized.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_enc_config_set(vpx_codec_ctx_t*, const vpx_codec_enc_cfg_t*)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:758</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_enc_config_set(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_codec_enc_cfg_t > cfg) {
		return FlagSet.fromValue(vpx_codec_enc_config_set(Pointer.getPeer(ctx), Pointer.getPeer(cfg)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_enc_config_set(@Ptr long ctx, @Ptr long cfg);
	/**
	 * \brief Get global stream headers<br>
	 * * Retrieves a stream level global header packet, if supported by the codec.<br>
	 * * \param[in]    ctx     Pointer to this instance's context<br>
	 * * \retval NULL<br>
	 *     Encoder does not support global header<br>
	 * \retval Non-NULL<br>
	 *     Pointer to buffer containing global header packet<br>
	 * Original signature : <code>vpx_fixed_buf_t* vpx_codec_get_global_headers(vpx_codec_ctx_t*)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:773</i>
	 */
	synchronized public static Pointer<vpx_fixed_buf_t > vpx_codec_get_global_headers(Pointer<vpx_codec_ctx_t > ctx) {
		return Pointer.pointerToAddress(vpx_codec_get_global_headers(Pointer.getPeer(ctx)), vpx_fixed_buf_t.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_get_global_headers(@Ptr long ctx);
	/**
	 * \brief Encode a frame<br>
	 * * Encodes a video frame at the given "presentation time." The presentation<br>
	 * time stamp (PTS) \ref MUST be strictly increasing.<br>
	 * * The encoder supports the notion of a soft real-time deadline. Given a<br>
	 * non-zero value to the deadline parameter, the encoder will make a "best<br>
	 * effort" guarantee to  return before the given time slice expires. It is<br>
	 * implicit that limiting the available time to encode will degrade the<br>
	 * output quality. The encoder can be given an unlimited time to produce the<br>
	 * best possible frame by specifying a deadline of '0'. This deadline<br>
	 * supercedes the VPx notion of "best quality, good quality, realtime".<br>
	 * Applications that wish to map these former settings to the new deadline<br>
	 * based system can use the symbols #VPX_DL_REALTIME, #VPX_DL_GOOD_QUALITY,<br>
	 * and #VPX_DL_BEST_QUALITY.<br>
	 * * When the last frame has been passed to the encoder, this function should<br>
	 * continue to be called, with the img parameter set to NULL. This will<br>
	 * signal the end-of-stream condition to the encoder and allow it to encode<br>
	 * any held buffers. Encoding is complete when vpx_codec_encode() is called<br>
	 * and vpx_codec_get_cx_data() returns no data.<br>
	 * * \param[in]    ctx       Pointer to this instance's context<br>
	 * \param[in]    img       Image data to encode, NULL to flush.<br>
	 * \param[in]    pts       Presentation time stamp, in timebase units.<br>
	 * \param[in]    duration  Duration to show frame, in timebase units.<br>
	 * \param[in]    flags     Flags to use for encoding this frame.<br>
	 * \param[in]    deadline  Time to spend encoding, in microseconds. (0=infinite)<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The configuration was populated.<br>
	 * \retval #VPX_CODEC_INCAPABLE<br>
	 *     Interface is not an encoder interface.<br>
	 * \retval #VPX_CODEC_INVALID_PARAM<br>
	 *     A parameter was NULL, the image format is unsupported, etc.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_encode(vpx_codec_ctx_t*, const vpx_image_t*, vpx_codec_pts_t, unsigned long, vpx_enc_frame_flags_t, unsigned long)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:815</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_encode(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_image_t > img, long pts, @CLong long duration, @CLong long flags, @CLong long deadline) {
		return FlagSet.fromValue(vpx_codec_encode(Pointer.getPeer(ctx), Pointer.getPeer(img), pts, duration, flags, deadline), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_encode(@Ptr long ctx, @Ptr long img, long pts, @CLong long duration, @CLong long flags, @CLong long deadline);
	/**
	 * \brief Set compressed data output buffer<br>
	 * * Sets the buffer that the codec should output the compressed data<br>
	 * into. This call effectively sets the buffer pointer returned in the<br>
	 * next VPX_CODEC_CX_FRAME_PKT packet. Subsequent packets will be<br>
	 * appended into this buffer. The buffer is preserved across frames,<br>
	 * so applications must periodically call this function after flushing<br>
	 * the accumulated compressed data to disk or to the network to reset<br>
	 * the pointer to the buffer's head.<br>
	 * * `pad_before` bytes will be skipped before writing the compressed<br>
	 * data, and `pad_after` bytes will be appended to the packet. The size<br>
	 * of the packet will be the sum of the size of the actual compressed<br>
	 * data, pad_before, and pad_after. The padding bytes will be preserved<br>
	 * (not overwritten).<br>
	 * * Note that calling this function does not guarantee that the returned<br>
	 * compressed data will be placed into the specified buffer. In the<br>
	 * event that the encoded data will not fit into the buffer provided,<br>
	 * the returned packet \ref MAY point to an internal buffer, as it would<br>
	 * if this call were never used. In this event, the output packet will<br>
	 * NOT have any padding, and the application must free space and copy it<br>
	 * to the proper place. This is of particular note in configurations<br>
	 * that may output multiple packets for a single encoded frame (e.g., lagged<br>
	 * encoding) or if the application does not reset the buffer periodically.<br>
	 * * Applications may restore the default behavior of the codec providing<br>
	 * the compressed data buffer by calling this function with a NULL<br>
	 * buffer.<br>
	 * * Applications \ref MUSTNOT call this function during iteration of<br>
	 * vpx_codec_get_cx_data().<br>
	 * * \param[in]    ctx         Pointer to this instance's context<br>
	 * \param[in]    buf         Buffer to store compressed data into<br>
	 * \param[in]    pad_before  Bytes to skip before writing compressed data<br>
	 * \param[in]    pad_after   Bytes to skip after writing compressed data<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The buffer was set successfully.<br>
	 * \retval #VPX_CODEC_INVALID_PARAM<br>
	 *     A parameter was NULL, the image format is unsupported, etc.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_set_cx_data_buf(vpx_codec_ctx_t*, const vpx_fixed_buf_t*, unsigned int, unsigned int)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:865</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_set_cx_data_buf(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_fixed_buf_t > buf, int pad_before, int pad_after) {
		return FlagSet.fromValue(vpx_codec_set_cx_data_buf(Pointer.getPeer(ctx), Pointer.getPeer(buf), pad_before, pad_after), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_set_cx_data_buf(@Ptr long ctx, @Ptr long buf, int pad_before, int pad_after);
	/**
	 * \brief Encoded data iterator<br>
	 * * Iterates over a list of data packets to be passed from the encoder to the<br>
	 * application. The different kinds of packets available are enumerated in<br>
	 * #vpx_codec_cx_pkt_kind.<br>
	 * * #VPX_CODEC_CX_FRAME_PKT packets should be passed to the application's<br>
	 * muxer. Multiple compressed frames may be in the list.<br>
	 * #VPX_CODEC_STATS_PKT packets should be appended to a global buffer.<br>
	 * * The application \ref MUST silently ignore any packet kinds that it does<br>
	 * not recognize or support.<br>
	 * * The data buffers returned from this function are only guaranteed to be<br>
	 * valid until the application makes another call to any vpx_codec_* function.<br>
	 * * \param[in]     ctx      Pointer to this instance's context<br>
	 * \param[in,out] iter     Iterator storage, initialized to NULL<br>
	 * * \return Returns a pointer to an output data packet (compressed frame data,<br>
	 *         two-pass statistics, etc.) or NULL to signal end-of-list.<br>
	 * Original signature : <code>vpx_codec_cx_pkt_t* vpx_codec_get_cx_data(vpx_codec_ctx_t*, vpx_codec_iter_t*)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:894</i>
	 */
	synchronized public static Pointer<vpx_codec_cx_pkt_t > vpx_codec_get_cx_data(Pointer<vpx_codec_ctx_t > ctx, Pointer<Pointer<? > > iter) {
		return Pointer.pointerToAddress(vpx_codec_get_cx_data(Pointer.getPeer(ctx), Pointer.getPeer(iter)), vpx_codec_cx_pkt_t.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_get_cx_data(@Ptr long ctx, @Ptr long iter);
	/**
	 * \brief Get Preview Frame<br>
	 * * Returns an image that can be used as a preview. Shows the image as it would<br>
	 * exist at the decompressor. The application \ref MUST NOT write into this<br>
	 * image buffer.<br>
	 * * \param[in]     ctx      Pointer to this instance's context<br>
	 * * \return Returns a pointer to a preview image, or NULL if no image is<br>
	 *         available.<br>
	 * Original signature : <code>vpx_image_t* vpx_codec_get_preview_frame(vpx_codec_ctx_t*)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:910</i>
	 */
	synchronized public static Pointer<vpx_image_t > vpx_codec_get_preview_frame(Pointer<vpx_codec_ctx_t > ctx) {
		return Pointer.pointerToAddress(vpx_codec_get_preview_frame(Pointer.getPeer(ctx)), vpx_image_t.class);
	}
